--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 
 0.10  2009/11/15
     (ms) Complete rewrite of parsers and classes
+    (ms) No longer supporting multi-line keys
 
 0.06  2009/10/20
     (ms) new() no longer reads the configuration file
