--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.11  (not yet released)
+    (ms) Documentation fixes
+
 0.10  2009/11/15
     (ms) Complete rewrite of parsers and classes
     (ms) No longer supporting multi-line keys
