--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.12  (not yet released)
+    (ms) Added test cases with weird keys
+
 0.11  (2009/11/30)
     (ms) Documentation fixes
     (ms) Added github repo link to Makefile.PL
