Added convenience methods path_locate() and ssh_dir() to locate a user's .ssh dir and authorized_keys file on disk.

--- a/Changes
+++ b/Changes
@@ -2,9 +2,11 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
-0.13  (not yet released)
+0.13  (2010/04/25)
     (ms) Moved ssh1 and ssh2 docs to base class.
     (ms) Added sanity check for files with extreme line lengths
+    (ms) Added convenience methods path_locate() and ssh_dir() to locate 
+         a user's .ssh dir and authorized_keys file on disk.
 
 0.12  (2010/02/22)
     (ms) Added test cases with weird keys
