Preserve order of options

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.14  (not yet released)
+    (ms) Preserve order of options
+
 0.13  (2010/04/25)
     (ms) Moved ssh1 and ssh2 docs to base class.
     (ms) Added sanity check for files with extreme line lengths
