--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.16  (01/31/2012)
+    (ms) Added support for ecdsa-* ssh-2 keys, requested by
+         Christian Ruppert.
+
 0.15  (02/16/2011)
     (ms) No longer using $& to eliminate both real and imaginary
          performance penalties.
